<resources>
    <string name="app_name">Bitewise</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="heart_pulse">BPM</string>
    <string name="account">Account</string>
    <string name="fab">Floating Action Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_recomendation">Food Recommendation</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="carbo">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="meal_name">Meal Name</string>
    <string name="gram">3 g</string>
    <string name="imageView">Image View</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_galery">Gallery</string>
    <string name="btn_analyze">Analyze</string>
    <string name="register">Register</string>
    <string name="bitwise">Bitewise</string>
    <string name="description">Take full control of your health! Bitewise helps you monitor the nutrition of your food, making every choice smarter and healthier.</string>
    <string name="signin">Sign In</string>
    <string name="welcome">Welcome Back!</string>
    <string name="enter_your_details">Please enter your details</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="password_length_error">Password must be at least 8 characters!</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_password_input">Password</string>
    <string name="hint_name">Input your Name!</string>
    <string name="hint_username">Input your Username!</string>
    <string name="hint_email">Input your Email!</string>
    <string name="hint_password">Input your Password!</string>
    <string name="hint_weight">Weight in Kg</string>
    <string name="hint_height">Height in Cm</string>
    <string name="hint_sugar">Blood Sugar</string>
    <string name="hint_cholesterol">Cholesterol</string>
    <string name="hint_blood_pressure">Blood Pressure</string>
    <string name="login_success">Login Success!</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="hint_age">Input your Age!</string>
    <string name="hint_health_condition">Health Condition</string>
    <string name="hint_activity_level">Activity Level</string>
    <string name="sign_out">Logout</string>
    <string name="sign_out_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="post">Post</string>
    <string name="comment">Your comment here!</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="no_post">No Post Found</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="post_something">Post Something</string>
    <string name="add_meal">Add Meal</string>
    <string name="calories">Calories</string>
    <string name="nutrition_intake">Nutrition Intake</string>
    <string name="consumed_today">Consumed Today</string>
    <string name="bmi">BMI</string>
    <string name="analysis_results">Analysis Results</string>
    <string name="analyze">Analyze</string>
    <string name="description_analytics">Analysis Description</string>
    <string name="back">Back</string>
    <string name="low">This food is considered safe for consumption. There are no indications that it would affect blood sugar, blood pressure, or pose other health risks.</string>
    <string name="medium">This food has an impact that should be monitored. There is potential for an increase in blood sugar or blood pressure, so it is recommended to consume it with caution.</string>
    <string name="high">This food is not recommended for consumption. The contents pose a significant risk of increasing blood sugar or blood pressure, which could negatively affect your health.</string>
    <string name="error">Error: Data not found</string>
    <string name="no_recomendation">No recommendation available. Please scan your meal first.</string>
    <string name="wait">Please wait, we\'re scanning your meal.</string>
    <string name="eat_something">You need to eat something</string>

    <string-array name="health_condition_array">
        <item>Diabetic</item>
        <item>Obese</item>
        <item>Heart Disease</item>
        <item>Healthy</item>
        <item>Hypertension</item>
    </string-array>

    <string-array name="activity_level_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
