<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="12dp"
    android:layout_margin="6dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/pallete_3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_user"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_user"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/meal_name"
            android:textColor="@color/color_2"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name_user"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/img_user"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/comment"
            android:textColor="@color/color_2"
            android:textSize="12sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
