<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="12dp"
    android:layout_margin="6dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/pallete_2">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/img_user"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/meal_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/pallete_3"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/txt_username"
            android:layout_marginStart="76dp"
            android:layout_marginEnd="25dp"
            android:background="@color/pallete_3"/>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/img_user"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/description"
            android:textSize="13sp"
            android:textColor="@color/pallete_3"
            android:layout_below="@+id/line"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_post"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="76dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="35dp"
            android:layout_below="@id/txt_description"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            tools:src="@tools:sample/avatars" />

        <Button
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="-7dp"
            app:icon="@drawable/comment_regular"
            app:iconTint="@color/pallete_3" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
